Bug Fix: Medium Editor doesn't show in posts
Fixed a bug where the z-index of the post's editor is too high and
obstructs medium's toolbar. This has been fixed by setting the editor's
z-index to 1000 which is substantially lower than the medium toolbar's
value of 2000.

--- a/app/scss/epochtalk/epochtalk.scss
+++ b/app/scss/epochtalk/epochtalk.scss
@@ -711,7 +711,7 @@ form .input-section:last-child {margin-bottom: 0px; }
   width: 100%;
   position: fixed;
   bottom: 0;
-  z-index: 8000; }
+  z-index: 1000; }
 
 .post-toolbar {
   background-color: $color-active;
